chore: show HTPP error code on failed fetch, update packages, remove @stricli/auto-complete, update api spec
