# src/generated_api/models/V0PipelineListAllTriggerParams.ts
@@ -1,0 +1,65 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Bitrise API
+ * Official REST API for Bitrise.io
+ *
+ * The version of the OpenAPI document: 0.1
+ * Contact: letsconnect@bitrise.io
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface V0PipelineListAllTriggerParams
+ */
+export interface V0PipelineListAllTriggerParams {
+    /**
+     * 
+     * @type {number}
+     * @memberof V0PipelineListAllTriggerParams
+     */
+    priority?: number;
+}
+
+/**
+ * Check if a given object implements the V0PipelineListAllTriggerParams interface.
+ */
+export function instanceOfV0PipelineListAllTriggerParams(value: object): value is V0PipelineListAllTriggerParams {
+    return true;
+}
+
+export function V0PipelineListAllTriggerParamsFromJSON(json: any): V0PipelineListAllTriggerParams {
+    return V0PipelineListAllTriggerParamsFromJSONTyped(json, false);
+}
+
+export function V0PipelineListAllTriggerParamsFromJSONTyped(json: any, ignoreDiscriminator: boolean): V0PipelineListAllTriggerParams {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'priority': json['priority'] == null ? undefined : json['priority'],
+    };
+}
+
+export function V0PipelineListAllTriggerParamsToJSON(json: any): V0PipelineListAllTriggerParams {
+    return V0PipelineListAllTriggerParamsToJSONTyped(json, false);
+}
+
+export function V0PipelineListAllTriggerParamsToJSONTyped(value?: V0PipelineListAllTriggerParams | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'priority': value['priority'],
+    };
+}
+
